--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=prod
+spring.profiles.active=test
 
 default.sender=alexandre.miranda@gmail.com
 default.recipient=alexandre.miranda@gmail.com
